# qt-cmake-demo

./: CMakeLists.txt  LICENSE  README.md
include/: mainwindow.h
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
